Adding scWGS mutational signature analysis

--- a/scWGS_Analytical_Results/mutational_signatures/mutational_signatures_analysis.ipynb
+++ b/scWGS_Analytical_Results/mutational_signatures/mutational_signatures_analysis.ipynb
@@ -154,7 +154,7 @@
    "outputs": [],
    "source": [
     "sOutFile = \"BBRAG_P02.sWGS.sample.v20200910.trinucleotide_profile.txt\"\n",
-    "if( file.exists(sRDS) ) {\n",
+    "if( file.exists(sOutFile) ) {\n",
     "    # Loading Mutational Profile\n",
     "    oMutMatrix = read.delim(sOutFile, sep=\"\\t\", header=T, stringsAsFactor=F)\n",
     "    rownames(oMutMatrix) = oMutMatrix$Trinucleotide.Change\n",
@@ -277,7 +277,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_contribution_heatmap(oFIT$contribution[aSelect,], cluster_samples = TRUE,, method = \"complete\")"
+    "plot_contribution_heatmap(oFIT$contribution[aSelect,], cluster_samples = TRUE, method = \"complete\")"
    ]
   },
   {
